merge postgres to mongo complete (#15)
* merge postgresa -> mongo part 1

* merge postgresa -> mongo part 2

* merge postgresa -> mongo part 3

* merge postgresa -> mongo part 4

* merge end